# tab-report-crusher

./: CONTRIBUTING.md  Plan.md  README.md  docker-compose.yml
.github/workflows/: build-api.yml  build-tauri.yml
cloud/: Dockerfile  app.py  docker-compose.yml  requirements.txt
cloud/sql_app/: auth.py  crud.py  database.py  models.py  schemas.py
desktop/: .dockerignore  Dockerfile.dev  index.html  package.json  vite.config.ts
desktop/src/: App.tsx  main.tsx  types.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/src/components/: ModelHub.tsx  ToleranceControlCenter.tsx  WebSocketProvider.tsx
desktop/worker/: Dockerfile.dev  ai_gateway.py  annotator.py  database.py  pyproject.toml  review.py
