[tool.poetry]
name = "tab-report-worker"
version = "0.1.0"
description = "Python worker for TAB Report Crusher"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.0.10"
PyMuPDF = "^1.23.5"
pdfplumber = "^0.7.5"
tiktoken = "^0.5.1"
openai = "^1.3.3"
# TODO: Add AI library dependencies for other models (e.g., anthropic)
# TODO: Add other necessary dependencies

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 